fontend-update is done

--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>appo</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  
-  
-
-
-<script src="js/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>appo</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Hero-part-start -->
+    <section class="hero">
+      <header>
+        <div class="container">
+          <nav class="navbar">
+            <div class="logo">
+              <img src="images/logo.svg" alt="image" />
+            </div>
+            <ul>
+              <li><a href="#home">home</a></li>
+              <li><a href="#home">Features</a></li>
+              <li><a href="#home">Pricing</a></li>
+            </ul>
+            <div class="right">
+              <a href="#!" class="btn-primary">Get The App</a>
+              <i class="fa fa-bars"></i>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <div class="container home-content">
+        <div class="home-left">
+          <h1 class="heading">Choose a better way to represent your app</h1>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+            elementum sed sit amet dui. Curabitur aliquet quam id dui posuere.
+          </p>
+          <a href="#!" class="btn-primary">Download Free Today</a>
+          <a href="#!" class="btn-primary">Reach Out To Us</a>
+        </div>
+        <div class="home-right">
+          <img src="images/home-hero.png" alt="appo" />
+        </div>
+      </div>
+    </section>
+    <!-- Hero-part-end -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
