--- a/index.html
+++ b/index.html
@@ -49,6 +49,48 @@
       </div>
     </section>
     <!-- Hero-part-end -->
+    <!-- Features-part-start -->
+    <section class="feature">
+      <div class="container">
+        <h1 class="section-heading">
+          Everything needed to power your app brend online
+        </h1>
+      </div>
+      <div class="container d-grid features-item">
+        <div class="features-items">
+          <img src="images/features-icons-1.png" alt="features-icons" class="icon-features">
+          <h3 class="item-subheading">Modern Flat Design</h3>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+          </p>
+        </div>
+        <div class="features-items">
+          <img src="images/features-icons-2.png" alt="features-icons" class="icon-features">
+          <h3 class="item-subheading">First 7 Days Free</h3>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+          </p>
+        </div>
+        <div class="features-items">
+          <img src="images/features-icons-3.png" alt="features-icons" class="icon-features">
+          <h3 class="item-subheading">Fully Support</h3>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+          </p>
+        </div>
+        <div class="features-items">
+          <img src="images/features-icons-4.png" alt="features-icons" class="icon-features">
+          <h3 class="item-subheading">User Friendly</h3>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Features-part-end -->
+    <!-- Why-you-use-start -->
+    
+    <!-- Why-you-use-end -->
     <script src="js/script.js"></script>
   </body>
 </html>
