html code is done

--- a/index.html
+++ b/index.html
@@ -58,39 +58,321 @@
       </div>
       <div class="container d-grid features-item">
         <div class="features-items">
-          <img src="images/features-icons-1.png" alt="features-icons" class="icon-features">
+          <img
+            src="images/features-icons-1.png"
+            alt="features-icons"
+            class="icon-features"
+          />
           <h3 class="item-subheading">Modern Flat Design</h3>
           <p class="paragraph">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diamdo.
           </p>
         </div>
         <div class="features-items">
-          <img src="images/features-icons-2.png" alt="features-icons" class="icon-features">
+          <img
+            src="images/features-icons-2.png"
+            alt="features-icons"
+            class="icon-features"
+          />
           <h3 class="item-subheading">First 7 Days Free</h3>
           <p class="paragraph">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diamdo.
           </p>
         </div>
         <div class="features-items">
-          <img src="images/features-icons-3.png" alt="features-icons" class="icon-features">
+          <img
+            src="images/features-icons-3.png"
+            alt="features-icons"
+            class="icon-features"
+          />
           <h3 class="item-subheading">Fully Support</h3>
           <p class="paragraph">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diamdo.
           </p>
         </div>
         <div class="features-items">
-          <img src="images/features-icons-4.png" alt="features-icons" class="icon-features">
+          <img
+            src="images/features-icons-4.png"
+            alt="features-icons"
+            class="icon-features"
+          />
           <h3 class="item-subheading">User Friendly</h3>
           <p class="paragraph">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan tincidunt. Vestibulum ac diamdo.
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diamdo.
           </p>
         </div>
       </div>
     </section>
     <!-- Features-part-end -->
     <!-- Why-you-use-start -->
-    
+    <section class="why">
+      <div class="container why-item d-grid">
+        <div class="why-img"></div>
+        <div class="why-content">
+          <h2 class="why-heading">Get More From Your Smartphone</h2>
+          <p class="paragraph why-paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+            elementum sed sit amet dui. Curabitur aliquet quam id dui posuere
+            blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum
+            ac diam sit amet quam vehicula elementum sed sit amet dui. Donec
+            sollicitudin molestie malesuada. Donec
+          </p>
+        </div>
+      </div>
+      <div class="container why-item d-grid">
+        <div class="why-content">
+          <h2 class="why-heading">Stable And Ready</h2>
+          <p class="paragraph why-paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+            elementum sed sit amet dui. Curabitur aliquet quam id dui posuere
+            blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum
+            ac diam sit amet quam.
+          </p>
+          <a href="#!" class="btn-primray">Download Free Today</a>
+        </div>
+        <div class="why-img">
+          <img src="images/windows-code.png" alt="code" class="why-image" />
+        </div>
+      </div>
+      <div class="container why-item d-grid">
+        <div class="why-img">
+          <img src="images/app-app.png" alt="app" class="app-place-bottom" />
+        </div>
+        <div class="why-content">
+          <div class="accrodion">
+            <div class="accrodion-item">
+              <div class="accrodion-heading">
+                <img
+                  src="images/tab-icon-1.png"
+                  alt="Accrodion"
+                  class="accrodion-icon"
+                />
+                <h4>Made With Love</h4>
+              </div>
+              <div class="accrodion-content">
+                <p class="paragraph">
+                  Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+                  accumsan tincidunt. Vestibulum ac diam.
+                </p>
+              </div>
+            </div>
+            <div class="accrodion-item">
+              <div class="accrodion-heading">
+                <img
+                  src="images/tab-icon-2.png"
+                  alt="Accrodion"
+                  class="accrodion-icon"
+                />
+                <h4>Free of Use</h4>
+              </div>
+              <div class="accrodion-content">
+                <p class="paragraph">
+                  Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+                  accumsan tincidunt. Vestibulum ac diam.
+                </p>
+              </div>
+            </div>
+            <div class="accrodion-item">
+              <div class="accrodion-heading">
+                <img
+                  src="images/tab-icon-3.png"
+                  alt="Accrodion"
+                  class="accrodion-icon"
+                />
+                <h4>Fully Support Avaliable</h4>
+              </div>
+              <div class="accrodion-content">
+                <p class="paragraph">
+                  Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+                  accumsan tincidunt. Vestibulum ac diam.
+                </p>
+              </div>
+            </div>
+            <div class="accrodion-item">
+              <div class="accrodion-heading">
+                <img
+                  src="images/tab-icon-4.png"
+                  alt="Accrodion"
+                  class="accrodion-icon"
+                />
+                <h4>Flat and Modern Ui & Ux</h4>
+              </div>
+              <div class="accrodion-content">
+                <p class="paragraph">
+                  Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+                  accumsan tincidunt. Vestibulum ac diam.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Why-you-use-end -->
+    <!-- Everything-you-need-start -->
+    <section class="everything">
+      <div class="container">
+        <div class="everything-content">
+          <h1 class="section-heading">Everything You Need</h1>
+          <ul class="phone-list">
+            <li>
+              <i class="fa fa-check"></i>
+              <span>Android</span>
+            </li>
+            <li>
+              <i class="fa fa-check"></i>
+              <span>iPhone</span>
+            </li>
+          </ul>
+          <p class="paragraph">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+            elementum sed sit amet dui. Curabitur aliquet quam id dui posuere
+            blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum
+            ac diam sit amet quam.
+          </p>
+        </div>
+        <div class="everything-img"></div>
+      </div>
+    </section>
+    <!-- Everything-you-need-end -->
+    <!-- watch-video-start -->
+    <section class="watch">
+      <div class="container">
+        <div class="watch-icon">
+          <i class="fa fa-play"></i>
+        </div>
+        <h2 class="watch-heading">WATCH THE VIDEO</h2>
+        <p class="paragraph">
+          Cras ultricies ligula sed magna dictum porta. Nulla porttitor accumsan
+          tincidunt. Vestibulum ac diam sit amet quam vehicula elementum sed sit
+          amet dui. Curabitur aliquet quam id dui posuere blandit. Curabitur
+          aliquet quam id dui posuere blandit. Vestibulum ac diam sit amet quam.
+        </p>
+      </div>
+    </section>
+    <!-- watch-video-end -->
+    <!-- Download-start -->
+    <section class="download">
+      <h1 class="section-heading">Join The Thousands of satisfied users</h1>
+      <h5 class="section-subheading">It’s just a few clicks away</h5>
+      <a href="#!" class="btn-primary">DOWNLOAD</a>
+    </section>
+    <!-- Download-end -->
+    <!-- Main-aim-part-start -->
+    <section class="aim">
+      <blockquote>
+        “Donec rutrum congue leo eget malesuada. Praesent sapien massa,
+        convallis a pellentesque nec, egestas non nisi. Curabitur aliquet quam
+        id dui posuere blandit.Donec rutrum congue leo eget malesuada. Praesent
+        sapien massa, con non nisi. Curabitur aliquet quam id dui posuere
+        blandit.”
+      </blockquote>
+    </section>
+    <!-- Main-aim-part-end -->
+    <!-- app-download-start -->
+    <section class="download-start">
+      <div class="container">
+        <div class="app-download-img">
+          <img
+            src="images/app-devices.png"
+            alt="app-download"
+            class="app-download-images"
+          />
+        </div>
+        <div class="appdownload-content">
+          <h1 class="section-heading">Now Available</h1>
+          <p class="paragrahp">
+            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+            elementum sed sit amet dui. quam vehicula elementum sed sit
+            ametsuada.
+          </p>
+          <a href="#!">
+            <img src="images/playstore.png" alt="Android" />
+          </a>
+          <a href="#!">
+            <img src="images/ios.png" alt="IOS" />
+          </a>
+        </div>
+        <a href="#!" class="btn-primary get">GET THE APP TODAY</a>
+      </div>
+    </section>
+    <!-- app-download-end -->
+    <!-- Footer-top-start -->
+    <section class="footer-top">
+      <div class="container">
+        <div class="footer-items">
+          <div class="footer-item">
+            <h3 class="footer-item-heading">Company</h3>
+            <li>Home</li>
+            <li>Jobs</li>
+            <li>Press</li>
+          </div>
+          <div class="footer-item">
+            <h3 class="footer-item-heading">Development</h3>
+            <li>IOS</li>
+            <li>Android</li>
+          </div>
+          <div class="footer-item">
+            <h3 class="footer-item-heading">Marketing</h3>
+            <li>Advertising</li>
+            <li>Referals</li>
+            <li>Get Quote</li>
+          </div>
+          <div class="footer-item">
+            <h3 class="footer-item-heading">Community</h3>
+            <li>Social</li>
+            <li>Forum</li>
+            <li>Contact</li>
+            <li>FAQ</li>
+          </div>
+          <div class="footer-item">
+            <h3 class="footer-item-heading">Info</h3>
+            <li>Terms of Service</li>
+            <li>Privacy Policy</li>
+            <li>Contact</li>
+            <li>FAQ</li>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer-top-end -->
+    <footer>
+      <div class="container">
+        <h1 class="section-heading">Get In Touch</h1>
+        <p class="paragraph">
+          Subscribe to our newsletter and get notification for upcoming cool
+          sutff.
+        </p>
+        <form action="">
+          <div class="input-container">
+            <input type="text" />
+            <button type="submit" class="btn btn-primary">COUNT ME IN</button>
+          </div>
+        </form>
+      </div>
+      <div class="footer-bttom">
+        <div class="container">
+          <div class="footer-let">
+            <h4>© 2021 - Appo,All Right Reserved</h4>
+          </div>
+          <div class="footer-right">
+            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-dribbble"></i>
+            <i class="fa fa-google-plus"></i>
+            <i class="fa fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
