today hero section coding is allmost done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon" />
     <title>appo</title>
     <link
       rel="stylesheet"
@@ -16,31 +17,35 @@
     <section class="hero">
       <header>
         <div class="container">
-          <nav class="navbar">
+          <nav class="navbar d-flex js-sb">
             <div class="logo">
               <img src="images/logo.svg" alt="image" />
             </div>
-            <ul>
-              <li><a href="#home">home</a></li>
+            <ul class="manue-active">
+              <li>
+                <a href="#home">Home <i class="fa fa-angle-down"></i> </a>
+              </li>
               <li><a href="#home">Features</a></li>
               <li><a href="#home">Pricing</a></li>
             </ul>
             <div class="right">
-              <a href="#!" class="btn-primary">Get The App</a>
-              <i class="fa fa-bars"></i>
+              <a href="#!" class="btn-primary mr-1">Get The App</a>
+              <i class="fa fa-bars text-white"></i>
             </div>
           </nav>
         </div>
       </header>
-      <div class="container home-content">
+      <div class="container home-content d-grid">
         <div class="home-left">
-          <h1 class="heading">Choose a better way to represent your app</h1>
-          <p class="paragraph">
+          <h1 class="heading text-white">
+            Choose a better way to represent your app
+          </h1>
+          <p class="paragraph text-light mb-1 mt-1">
             Cras ultricies ligula sed magna dictum porta. Nulla porttitor
             accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
             elementum sed sit amet dui. Curabitur aliquet quam id dui posuere.
           </p>
-          <a href="#!" class="btn-primary">Download Free Today</a>
+          <a href="#!" class="btn-primary mr-1">Download Free Today</a>
           <a href="#!" class="btn-primary">Reach Out To Us</a>
         </div>
         <div class="home-right">
@@ -260,20 +265,24 @@
     <!-- watch-video-end -->
     <!-- Download-start -->
     <section class="download">
-      <h1 class="section-heading">Join The Thousands of satisfied users</h1>
-      <h5 class="section-subheading">It’s just a few clicks away</h5>
-      <a href="#!" class="btn-primary">DOWNLOAD</a>
+      <div class="container">
+        <h1 class="section-heading">Join The Thousands of satisfied users</h1>
+        <h5 class="section-subheading">It’s just a few clicks away</h5>
+        <a href="#!" class="btn-primary">DOWNLOAD</a>
+      </div>
     </section>
     <!-- Download-end -->
     <!-- Main-aim-part-start -->
     <section class="aim">
-      <blockquote>
-        “Donec rutrum congue leo eget malesuada. Praesent sapien massa,
-        convallis a pellentesque nec, egestas non nisi. Curabitur aliquet quam
-        id dui posuere blandit.Donec rutrum congue leo eget malesuada. Praesent
-        sapien massa, con non nisi. Curabitur aliquet quam id dui posuere
-        blandit.”
-      </blockquote>
+      <div class="container">
+        <blockquote>
+          “Donec rutrum congue leo eget malesuada. Praesent sapien massa,
+          convallis a pellentesque nec, egestas non nisi. Curabitur aliquet quam
+          id dui posuere blandit.Donec rutrum congue leo eget malesuada.
+          Praesent sapien massa, con non nisi. Curabitur aliquet quam id dui
+          posuere blandit.”
+        </blockquote>
+      </div>
     </section>
     <!-- Main-aim-part-end -->
     <!-- app-download-start -->
