--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     <!-- Why-you-use-start -->
     <section class="why">
       <div class="container why-item d-grid">
-        <div class="why-img"></div>
+        <div class="why-img">
+          <img src="images/phone.jpg" alt="" class="why-image"/>
+        </div>
         <div class="why-content">
           <h2 class="why-heading">Get More From Your Smartphone</h2>
           <p class="paragraph why-paragraph">
