--- a/index.html
+++ b/index.html
@@ -115,20 +115,22 @@
     <!-- Features-part-end -->
     <!-- Why-you-use-start -->
     <section class="why">
-      <div class="container why-item d-grid">
-        <div class="why-img">
-          <img src="images/phone.jpg" alt="" class="why-image"/>
-        </div>
-        <div class="why-content">
-          <h2 class="why-heading">Get More From Your Smartphone</h2>
-          <p class="paragraph why-paragraph">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
-            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
-            elementum sed sit amet dui. Curabitur aliquet quam id dui posuere
-            blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum
-            ac diam sit amet quam vehicula elementum sed sit amet dui. Donec
-            sollicitudin molestie malesuada. Donec
-          </p>
+      <div class="item-1">
+        <div class="container why-item d-grid">
+          <div class="why-img">
+            <img src="images/phone.jpg" alt="" class="why-image" />
+          </div>
+          <div class="why-content">
+            <h2 class="why-heading">Get More From Your Smartphone</h2>
+            <p class="paragraph why-paragraph">
+              Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+              accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+              elementum sed sit amet dui. Curabitur aliquet quam id dui posuere
+              blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum
+              ac diam sit amet quam vehicula elementum sed sit amet dui. Donec
+              sollicitudin molestie malesuada. Donec
+            </p>
+          </div>
         </div>
       </div>
       <div class="container why-item d-grid">
