latest_fontend update is here

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="container why-item d-grid">
-        <div class="why-content">
+        <div class="why-content text-right">
           <h2 class="why-heading">Stable And Ready</h2>
           <p class="paragraph why-paragraph">
             Cras ultricies ligula sed magna dictum porta. Nulla porttitor
