--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="why-content">
           <div class="accrodion">
             <div class="accrodion-item">
-              <div class="accrodion-heading">
+              <div class="accrodion-heading d-flex" data-accrodion="1">
                 <img
                   src="images/tab-icon-1.png"
                   alt="Accrodion"
@@ -164,7 +164,7 @@
                 />
                 <h4>Made With Love</h4>
               </div>
-              <div class="accrodion-content">
+              <div class="accrodion-content" data-accrodion="1">
                 <p class="paragraph">
                   Cras ultricies ligula sed magna dictum porta. Nulla porttitor
                   accumsan tincidunt. Vestibulum ac diam.
@@ -172,7 +172,7 @@
               </div>
             </div>
             <div class="accrodion-item">
-              <div class="accrodion-heading">
+              <div class="accrodion-heading d-flex" data-accrodion="2">
                 <img
                   src="images/tab-icon-2.png"
                   alt="Accrodion"
@@ -180,7 +180,7 @@
                 />
                 <h4>Free of Use</h4>
               </div>
-              <div class="accrodion-content">
+              <div class="accrodion-content" data-accrodion="2">
                 <p class="paragraph">
                   Cras ultricies ligula sed magna dictum porta. Nulla porttitor
                   accumsan tincidunt. Vestibulum ac diam.
@@ -188,7 +188,7 @@
               </div>
             </div>
             <div class="accrodion-item">
-              <div class="accrodion-heading">
+              <div class="accrodion-heading d-flex" data-accrodion="3">
                 <img
                   src="images/tab-icon-3.png"
                   alt="Accrodion"
@@ -196,7 +196,7 @@
                 />
                 <h4>Fully Support Avaliable</h4>
               </div>
-              <div class="accrodion-content">
+              <div class="accrodion-content" data-accrodion="3">
                 <p class="paragraph">
                   Cras ultricies ligula sed magna dictum porta. Nulla porttitor
                   accumsan tincidunt. Vestibulum ac diam.
@@ -204,7 +204,7 @@
               </div>
             </div>
             <div class="accrodion-item">
-              <div class="accrodion-heading">
+              <div class="accrodion-heading d-flex" data-accrodion="4">
                 <img
                   src="images/tab-icon-4.png"
                   alt="Accrodion"
@@ -212,7 +212,7 @@
                 />
                 <h4>Flat and Modern Ui & Ux</h4>
               </div>
-              <div class="accrodion-content">
+              <div class="accrodion-content" data-accrodion="4">
                 <p class="paragraph">
                   Cras ultricies ligula sed magna dictum porta. Nulla porttitor
                   accumsan tincidunt. Vestibulum ac diam.
