new update is done

--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
     <!-- Everything-you-need-start -->
     <section class="everything">
       <div class="container">
-        <div class="everything-content">
-          <h1 class="section-heading">Everything You Need</h1>
+        <h1 class="section-heading">Everything You Need</h1>
+      </div>
+      <div class="container d-grid everything-grid">
+        <div class="everything-content text-right">
           <ul class="phone-list">
             <li>
               <i class="fa fa-check"></i>
