download section is done

--- a/index.html
+++ b/index.html
@@ -272,9 +272,13 @@
     <!-- Download-start -->
     <section class="download">
       <div class="container">
-        <h1 class="section-heading">Join The Thousands of satisfied users</h1>
-        <h5 class="section-subheading">It’s just a few clicks away</h5>
-        <a href="#!" class="btn-primary">DOWNLOAD</a>
+        <div class="download-container d-flex">
+          <h1 class="section-download">
+            Join The Thousands of satisfied users
+          </h1>
+          <h5 class="section-subheading">It’s just a few clicks away</h5>
+          <a href="#!" class="btn-primary btn-glow">DOWNLOAD</a>
+        </div>
       </div>
     </section>
     <!-- Download-end -->
@@ -294,29 +298,31 @@
     <!-- app-download-start -->
     <section class="download-start">
       <div class="container">
-        <div class="app-download-img">
-          <img
-            src="images/app-devices.png"
-            alt="app-download"
-            class="app-download-images"
-          />
+        <div class="d-grid grid-2 download-grid">
+          <div class="app-download-img">
+            <img
+              src="images/app-devices.png"
+              alt="app-download"
+              class="app-download-images"
+            />
+          </div>
+          <div class="appdownload-content">
+            <h1 class="grid-heading">Now Available</h1>
+            <p class="paragrahp">
+              Cras ultricies ligula sed magna dictum porta. Nulla porttitor
+              accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
+              elementum sed sit amet dui. quam vehicula elementum sed sit
+              ametsuada.
+            </p>
+            <a href="#!">
+              <img src="images/playstore.png" alt="Android" class="devices"/>
+            </a>
+            <a href="#!">
+              <img src="images/ios.png" alt="IOS" class="devices"/>
+            </a>
+          </div>
         </div>
-        <div class="appdownload-content">
-          <h1 class="section-heading">Now Available</h1>
-          <p class="paragrahp">
-            Cras ultricies ligula sed magna dictum porta. Nulla porttitor
-            accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
-            elementum sed sit amet dui. quam vehicula elementum sed sit
-            ametsuada.
-          </p>
-          <a href="#!">
-            <img src="images/playstore.png" alt="Android" />
-          </a>
-          <a href="#!">
-            <img src="images/ios.png" alt="IOS" />
-          </a>
-        </div>
-        <a href="#!" class="btn-primary get">GET THE APP TODAY</a>
+        <a href="#!" class="btn-primary get btn-glow">GET THE APP TODAY</a>
       </div>
     </section>
     <!-- app-download-end -->
