--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
               ametsuada.
             </p>
             <a href="#!">
-              <img src="images/playstore.png" alt="Android" class="devices"/>
+              <img src="images/playstore.png" alt="Android" class="devices" />
             </a>
             <a href="#!">
-              <img src="images/ios.png" alt="IOS" class="devices"/>
+              <img src="images/ios.png" alt="IOS" class="devices" />
             </a>
           </div>
         </div>
@@ -329,7 +329,7 @@
     <!-- Footer-top-start -->
     <section class="footer-top">
       <div class="container">
-        <div class="footer-items">
+        <div class="footer-items d-grid">
           <div class="footer-item">
             <h3 class="footer-item-heading">Company</h3>
             <li>Home</li>
@@ -367,33 +367,39 @@
     <!-- Footer-top-end -->
     <footer>
       <div class="container">
-        <h1 class="section-heading">Get In Touch</h1>
-        <p class="paragraph">
-          Subscribe to our newsletter and get notification for upcoming cool
-          sutff.
-        </p>
-        <form action="">
-          <div class="input-container">
-            <input type="text" />
-            <button type="submit" class="btn btn-primary">COUNT ME IN</button>
-          </div>
-        </form>
-      </div>
-      <div class="footer-bttom">
-        <div class="container">
-          <div class="footer-let">
-            <h4>© 2021 - Appo,All Right Reserved</h4>
-          </div>
-          <div class="footer-right">
-            <i class="fa fa-facebook-f"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-dribbble"></i>
-            <i class="fa fa-google-plus"></i>
-            <i class="fa fa-youtube"></i>
-          </div>
+        <div class="footer-grid d-flex">
+          <h1 class="footer-heading text-center">Get In Touch</h1>
+          <p class="paragraph">
+            Subscribe to our newsletter and get notification for upcoming cool
+            sutff.
+          </p>
+          <form action="">
+            <div class="input-container">
+              <input type="text" />
+              <button type="submit" class="btn btn-primary btn-glow">
+                COUNT ME IN
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
+    <div class="footer-bttom">
+      <div class="container">
+        <div class="d-flex js-sb">
+          <div class="footer-left">
+            <h4>© 2021 - Appo,All Right Reserved</h4>
+          </div>
+          <div class="footer-right">
+            <i class="fab fa-1x fa-facebook-f"></i>
+            <i class="fab fa-1x fa-twitter"></i>
+            <i class="fab fa-1x fa-dribbble"></i>
+            <i class="fab fa-1x fa-google-plus-g"></i>
+            <i class="fab fa-1x fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
